fix(flowplayer): add fullscreen button on mobile, bump: 2.16.0

--- a/src/components/FlowPlayer/FlowPlayer.scss
+++ b/src/components/FlowPlayer/FlowPlayer.scss
@@ -9,7 +9,6 @@ $c-play-overlay-inner-bg: #0f171d;
 $c-spinner-fullscreen-holder-bg: rgba(#000, 0.5);
 $c-video-player-progress-inner-bg: #25a4cf;
 
-
 .c-button--borderless {
 	background-color: transparent;
 	color: #fff;
@@ -69,8 +68,8 @@ $c-video-player-progress-inner-bg: #25a4cf;
 		top: 50%;
 		left: 50%;
 		transform: translate(
-				-(math.div($player-play-button-dimensions, 2)),
-				-(math.div($player-play-button-dimensions, 2))
+			-(math.div($player-play-button-dimensions, 2)),
+			-(math.div($player-play-button-dimensions, 2))
 		);
 		background-image: url("data:image/svg+xml,%3Csvg fill='none' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M5 21.9999C4.835 21.9999 4.67 21.9589 4.521 21.8779C4.2 21.7019 4 21.3659 4 20.9999V2.99989C4 2.63389 4.2 2.29689 4.521 2.12189C4.841 1.94689 5.232 1.95989 5.541 2.15889L19.541 11.1589C19.827 11.3429 20 11.6599 20 11.9999C20 12.3399 19.827 12.6569 19.541 12.8409L5.541 21.8409C5.376 21.9459 5.188 21.9999 5 21.9999ZM6 4.83189V19.1679L17.15 11.9999L6 4.83189Z' fill='white' fill-opacity='0.67'/%3E%3C/svg%3E%0A");
 		background-size: $player-play-button-icon-dimensions;
@@ -172,20 +171,24 @@ $c-video-player-progress-inner-bg: #25a4cf;
 		right: 0;
 		bottom: 0;
 		left: auto;
-		width: 75px;
+		width: 60px;
 		padding: 0;
 		color: rgb(255 255 255 / 67%);
 		background-color: rgb(15 23 29 / 80%);
 		z-index: 1;
 	}
 
+	&.is-touched .fp-header,
+	&.is-hovered .fp-header {
+		display: flex;
+	}
+
 	.fp-controls {
-		width: calc(100% - 75px);
+		width: calc(100% - 60px);
 		color: rgb(255 255 255 / 67%);
 		background-color: rgb(15 23 29 / 80%);
 		z-index: 0;
 	}
-
 
 	&.is-cast-available {
 		.fp-header {
